--- a/quiz_duchau/package.json
+++ b/quiz_duchau/package.json
@@ -17,7 +17,7 @@
     "npm-sass": "^3.1.0",
     "nprogress": "0.2.0",
     "react": "^19.0.0",
-   
+    "react-awesome-lightbox": "^1.8.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-i18next": "11.18.3",
