--- a/quiz_duchau/package.json
+++ b/quiz_duchau/package.json
@@ -17,7 +17,6 @@
     "npm-sass": "^3.1.0",
     "nprogress": "0.2.0",
     "react": "^19.0.0",
-    "react-awesome-lightbox": "^1.8.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-i18next": "11.18.3",
@@ -36,7 +35,8 @@
     "redux-persist": "6.0.0",
     "redux-thunk": "^3.1.0",
     "uuid": "8.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "scripts": {
     "start": "react-scripts start",
